full spring boot project with docker-compose